--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ pytest == 7.4.3
 brainflow == 5.18.0
 fastapi == 0.115.12
 plotly == 6.1.2
+coverage == 7.9.1
+matplotlib == 3.10.3
+scikit-learn == 1.7.0
