--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,10 @@ jobs:
       - name: Log in to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+        
+      - name: Mask ECR password
+        run: echo "::add-mask::${{ steps.login-ecr.outputs.password }}"
+        
 
       - name: Build, tag & push Docker image
         uses: docker/build-push-action@v4
