--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
+          file: ./infra/docker/Dockerfile
           push:    true
           tags:    ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
 
