--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,10 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      id-token: write
+
     env:
       AWS_REGION: us-west-2
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
