--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 openai >= 1.0.0
-pyyaml == 6.0.1
-numpy == 1.26.1
-pandas == 2.1.1
-scipy == 1.15.0
-streamlit == 1.25.0
-pytest == 7.4.3
-brainflow == 5.18.0
-fastapi == 0.115.12
-plotly == 6.1.2
-coverage == 7.9.1
-matplotlib == 3.10.3
-scikit-learn == 1.7.0
+pyyaml >= 6.0.1
+numpy >= 1.26.1
+pandas >= 2.1.1
+scipy >= 1.15.0
+streamlit >= 1.25.0
+pytest >= 7.4.3
+brainflow >= 5.18.0
+fastapi >= 0.115.12
+plotly >= 6.1.2
+coverage >= 7.9.1
+matplotlib >= 3.10.3
+scikit-learn >= 1.7.0
+neuralake >= 0.0.5
+deltalake >= 0.25.4
+polars >= 1.9.0
